--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ default = ["console_error_panic_hook"]
 cfg-if = "0.1.2"
 worker = "0.0.4"
 console_error_panic_hook = { version = "0.1.1", optional = true }
+futures = "0.3.17"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
