--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ cfg-if = "0.1.2"
 worker = "0.0.4"
 console_error_panic_hook = { version = "0.1.1", optional = true }
 futures = "0.3.17"
+uuid { version = "0.8", features = ["wasm-bindgen", "v4"] }
+
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
