--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ cfg-if = "0.1.2"
 worker = "0.0.4"
 console_error_panic_hook = { version = "0.1.1", optional = true }
 futures = "0.3.17"
-uuid { version = "0.8", features = ["wasm-bindgen", "v4"] }
+uuid = { version = "0.8", features = ["wasm-bindgen", "v4"] }
 
 
 [profile.release]
