--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,9 @@ worker = "0.0.4"
 console_error_panic_hook = { version = "0.1.1", optional = true }
 futures = "0.3.17"
 uuid = { version = "0.8", features = ["wasm-bindgen", "v4"] }
-
+crypto = "0.3.0"
+argon2 = "0.2"
+rand_core = { version = "0.6", features = ["std"] }
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
