--- a/wrangler.toml
+++ b/wrangler.toml
@@ -14,6 +14,7 @@ kv_namespaces = [
 
 [vars]
 WORKERS_RS_VERSION = "0.0.4"
+SESSION_EXPIRY = "43200"
 
 [build]
 command = "cargo install -q worker-build && worker-build --release" # required
