adjusted cache again

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,10 +18,10 @@ jobs:
         path: |
           ~/build
           ~/target
-          $CARGO_HOME$/bin/
-          $CARGO_HOME$/registry/index/
-          $CARGO_HOME$/registry/cache/
-          $CARGO_HOME$/git/db/
+          $HOME/.cargo/bin/
+          $HOME/.cargo/registry/index/
+          $HOME/.cargo/registry/cache/
+          $HOME/.cargo/git/db/
         key: ${{ runner.os }}-${{ hashFiles('Cargo.lock') }}
     - name: Build
       run: cargo build --verbose
