--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "forum"
+name = "forum_dev"
 type = "javascript"
 workers_dev = true
 compatibility_date = "2021-08-27" # required
@@ -29,8 +29,8 @@ globs = ["**/*.wasm"]
 type  = "CompiledWasm"
 
 
-[env.dev]
-name = "forum_dev"
+[env.prod]
+name = "forum"
 
 # read more about configuring your Worker via wrangler.toml at:
 # https://developers.cloudflare.com/workers/cli-wrangler/configuration
