--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,15 +1,15 @@
-name: develop
+name: Deploy
 
 on:
   push:
     branches:
-      - develop
-    workflow_dispatch:
+      - master
+  workflow_dispatch:
 
 jobs:
-  test:
+  deploy:
     runs-on: ubuntu-latest
-    name: test
+    name: Deploy
     steps:
       - uses: actions/checkout@v2
       - name: Cache Build artifacts
@@ -33,4 +33,4 @@ jobs:
       - name: Publish
         env:
           CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
-        run: npm i @cloudflare/wrangler && npx wrangler publish
+        run: npm i @cloudflare/wrangler && npx wrangler publish --env prod
