--- a/wrangler.toml
+++ b/wrangler.toml
@@ -17,7 +17,7 @@ WORKERS_RS_VERSION = "0.0.4"
 SESSION_EXPIRY = "43200"
 
 [build]
-command = "cargo install -q worker-build && worker-build --release" # required
+command = "cargo install --force -q worker-build && worker-build --release" # required
 
 [build.upload]
 dir    = "build/worker"
