--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,9 +7,9 @@ compatibility_flags = [ "formdata_parser_supports_files" ] # required
 account_id = "35731bea8d79eb5550079b4e017b7a33"
 
 kv_namespaces = [
-  { binding = "POSTS", id = "b5496af25e96469c9c31977dbdefa867", preview_id = "b5496af25e96469c9c31977dbdefa867" },
-  { binding = "SESSIONS", id = "d379b2819de248b3a2d432462564e0c7", preview_id = "d379b2819de248b3a2d432462564e0c7" },
-  { binding = "USERS", id = "c4bc2f8c23184ec4999d5115158618af", preview_id = "c4bc2f8c23184ec4999d5115158618af" }
+  { binding = "POSTS", id = "90e69a7c374d40ffac9a36c402c44d8c", preview_id = "90e69a7c374d40ffac9a36c402c44d8c" },
+  { binding = "SESSIONS", id = "38b25c9176da4672b6cedaa57ebf44d2", preview_id = "38b25c9176da4672b6cedaa57ebf44d2" },
+  { binding = "USERS", id = "6e3db67a60e344138707835ed0ba1644", preview_id = "6e3db67a60e344138707835ed0ba1644" }
 ]
 
 [vars]
@@ -31,6 +31,11 @@ type  = "CompiledWasm"
 
 [env.prod]
 name = "forum"
+kv_namespaces = [
+  { binding = "POSTS", id = "b5496af25e96469c9c31977dbdefa867", preview_id = "b5496af25e96469c9c31977dbdefa867" },
+  { binding = "SESSIONS", id = "d379b2819de248b3a2d432462564e0c7", preview_id = "d379b2819de248b3a2d432462564e0c7" },
+  { binding = "USERS", id = "c4bc2f8c23184ec4999d5115158618af", preview_id = "c4bc2f8c23184ec4999d5115158618af" }
+]
 
 # read more about configuring your Worker via wrangler.toml at:
 # https://developers.cloudflare.com/workers/cli-wrangler/configuration
