--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ rand_core = { version = "0.6", features = ["std"] }
 serde = "1.0.130"
 serde_json = "1.0.68"
 regex = "1.5.4"
+html-escape = "0.2.9"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
